// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/TextField > Affix 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <div
          class="charcoal-text-field-prefix"
        >
          /home/john/
        </div>
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          type="text"
          value=""
        />
        <div
          class="charcoal-text-field-suffix"
        >
          .png
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > AssistiveText 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-describedby="test-id"
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          type="text"
          value=""
        />
      </div>
      <div
        class="charcoal-text-field-assistive-text"
        data-invalid="false"
        id="test-id"
      >
        説明が入ります
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > Default 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span>
            <button
              class="charcoal-clickable"
            >
              Text Link
            </button>
          </span>
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-invalid="false"
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          placeholder="TextField"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > Disabled 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="true"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-disabled="true"
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          disabled=""
          id="test-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > Invalid 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="true"
      >
        <input
          aria-describedby="test-id"
          aria-invalid="true"
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="true"
          id="test-id"
          type="text"
          value=""
        />
      </div>
      <div
        class="charcoal-text-field-assistive-text"
        data-invalid="true"
        id="test-id"
      >
        エラーメッセージ
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > Label 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > Number 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        />
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          type="number"
          value="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > Placeholder 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          placeholder="Placeholder"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > Prefix 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <div
          class="charcoal-text-field-prefix"
        >
          <div
            style="display: flex; align-items: center;"
          >
            <pixiv-icon
              name="16/Search"
            />
          </div>
        </div>
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > ReadOnly 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          readonly=""
          type="text"
          value="読み取り専用"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > RequiredText 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-required-text"
        >
          *必須
        </div>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > ShowCount 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          maxlength="100"
          type="text"
          value=""
        />
        <div
          class="charcoal-text-field-suffix"
        >
          <span
            class="charcoal-text-field-line-counter"
          >
            0/100
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/TextField > SubLabel 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-disabled="false"
      class="charcoal-text-field-root"
    >
      <div
        class="charcoal-field-label-root charcoal-visually-hidden"
      >
        <label
          class="charcoal-field-label"
          for="test-id"
          id="test-id"
        >
          Label
        </label>
        <div
          class="charcoal-field-label-sub-label"
        >
          <span>
            <button
              class="charcoal-clickable"
            >
              Text Link
            </button>
          </span>
        </div>
      </div>
      <div
        class="charcoal-text-field-container"
        data-invalid="false"
      >
        <input
          aria-labelledby="test-id"
          class="charcoal-text-field-input"
          data-invalid="false"
          id="test-id"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
